# electrolytes

./: .devcontainer.json  .dockerignore  .git-blame-ignore-revs  CITATION.cff  Dockerfile  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml  dockerhub-description.yml  pypi-publish.yml
electrolytes/: __init__.py  __main__.py  _constituent.py
electrolytes/data/: constituents.json
src/electrolytes/: __init__.py  __main__.py
tests/: ruff.toml  test_api.py  test_cli.py  test_lock.py
