[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "electrolytes"
description = "Electrolyte database manager"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Gabriel S. Gerlero", email = "ggerlero@cimec.unl.edu.ar"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = [
    "typer-slim>=0.12.0,<0.16",
    "pydantic>=2.0.3,<3",
    "filelock>=3.12.3,<4",
    "typing-extensions>=4,<5; python_version<'3.11'",
]

dynamic = ["version"]

[dependency-groups]
lint = ["ruff"]
typing = ["ty"]
test = [
    "pytest>=7,<9",
    "pytest-cov",
]
dev = [
    {include-group = "lint"},
    {include-group = "typing"},
    {include-group = "test"},
]

[project.urls]
Homepage = "https://github.com/microfluidica/electrolytes"
Repository = "https://github.com/microfluidica/electrolytes"

[project.scripts]
electrolytes = "electrolytes.__main__:app"

[tool.setuptools.dynamic]
version = {attr = "electrolytes.__version__"}

[tool.setuptools.package-data]
electrolytes = ["db1.json"]

[tool.ruff.lint]
extend-select = ["ALL"]
extend-ignore = [
    "BLE001",
    "C901",
    "COM812",
    "D",
    "E501",
    "ISC001",
    "PLR0913",
    "S101",
]
