[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[project]
name = "electrolytes"
version = "0.4.8"
license = "GPL-3.0-only"
license-files = ["LICENSE.txt"]
description = "Electrolyte database manager"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Gabriel S. Gerlero", email = "ggerlero@cimec.unl.edu.ar"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = [
    "typer-slim>=0.12.0,<0.17",
    "pydantic>=2.0.3,<3",
    "filelock>=3.12.3,<4",
    "typing-extensions>=4,<5; python_version<'3.11'",
]

[dependency-groups]
lint = ["ruff"]
typing = ["ty"]
test = [
    "pytest>=7,<9",
    "pytest-cov",
]
dev = [
    {include-group = "lint"},
    {include-group = "typing"},
    {include-group = "test"},
]

[project.urls]
Homepage = "https://github.com/microfluidica/electrolytes"
Repository = "https://github.com/microfluidica/electrolytes"

[project.scripts]
electrolytes = "electrolytes.__main__:app"

[tool.uv.build-backend]
module-root = "."

[tool.ruff.lint]
extend-select = ["ALL"]
extend-ignore = [
    "BLE001",
    "C901",
    "COM812",
    "D",
    "E501",
    "ISC001",
    "PLR0913",
    "S101",
]
