[metadata]
name = electrolytes
version = attr: electrolytes.__version__
author = Gabriel S. Gerlero
author_email = ggerlero@cimec.unl.edu.ar
description = Electrolyte database manager
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/microfluidica/electrolytes
project_urls =
    Source Code = https://github.com/microfluidica/electrolytes
    Bug Tracker = https://github.com/microfluidica/electrolytes/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development :: Libraries

[options]
packages = electrolytes
entry_points=
    [console_scripts]
    electrolytes = electrolytes.__main__:app
include_package_data = True
python_requires = >=3.6
install_requires =
    typer>=0.3.2,<0.5
    pydantic>=1.8.2,<2

[options.extras_require]
test =
    pytest>=6.2.4,<7
    pytest-cov
lint =
    %(test)s
    mypy
    check-manifest
